# CCTV

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.hallmark/: log.json  preflight.json
alembic/: env.py
app/: __init__.py  app.py  main.py
dashboard/: Dockerfile  README.md  index.html  package.json  tokens.css  vite.config.js
docker/: download_biometric_models.py  entrypoint.sh
examples/: camera_service_example.py  crossing_service_example.py  detector_service_example.py  reid_service_example.py  snapshot_service_example.py  tracking_service_example.py
scripts/: list_mac_cameras.sh  start_mac_webcam.sh
tests/: test_ai_job_repository.py  test_ai_processing_worker.py  test_auth_rate_limit.py  test_backup_service.py  test_biometric_identity_service.py  test_body_analysis_engine.py  test_body_analysis_service.py  test_camera_connection_tester.py  test_camera_crossing_config.py  test_camera_runtime_manager.py  test_camera_service.py  test_capture_event_routes.py  test_capture_evidence_phase3.py  test_crossing_service.py  test_dashboard_hub.py  test_database_session.py  test_detector_service.py  test_disaster_recovery_service.py  test_employee_service.py  test_error_handlers.py  test_evidence_access_service.py  test_evidence_routes.py  test_health_routes.py  test_journey_correlation_service.py  test_live_visibility_service.py  test_logging.py  test_login_rate_limiter.py  test_occupancy_service.py  test_password_service.py  test_pipeline_repository_presence.py  test_reid_service.py  (+14 more)
(+180 files in other folders)
