[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cctv-people-flow"
version = "0.1.0"
description = "Realtime CCTV person detection and flow tracking"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.14,<2.0",
    "opencv-python-headless>=4.10,<5.0",
    "PyJWT>=2.9,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "cryptography>=43.0,<46.0",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.3,<9.0",
    "torch>=2.5,<3.0",
    "torchreid>=0.2.5",
]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27,<1.0", "ruff>=0.8,<1.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
